--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack serve --hot --mode development --config webpack.dev.config.js",
     "build": "webpack --mode production",
     "start": "node server.js"
   },
@@ -23,13 +23,19 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.13",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-env": "^7.13.12",
+    "babel": "^6.23.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.0",
+    "file-loader": "^6.2.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.28.0",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   }
 }
